# rayon

./: Cargo.toml
fold-chunks-bench/: Cargo.toml
fold-chunks-bench/benches/: fold_chunks_bench.rs
src/: delegate.rs  option.rs  range.rs  result.rs  vec.rs
src/iter/: args.rs  chain.rs  chunks_fold.rs  chunks_maybe_fold.rs  empty.rs  flat_map_args.rs  flat_map_exact.rs  map.rs  map_interleave.rs  map_interleaved.rs  mod.rs  once.rs  trim.rs  util.rs
src/iter/plumbing/: mod.rs
